public/bicycle.css
#windows .window:not(.active) {
    visibility: hidden;
}

#windows .window.active {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    visibility: visible;
}

#windows .window.map #bikelist > table {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    border-collapse: collapse;
}

#windows .window.map #bikelist > table > tbody > tr {
    vertical-align: top;
}

#windows .window.map #bikelist > table > tbody > tr > td {
    margin: 0;
    padding: 0;
}

#windows .window.map #bikelist .title {
    text-align: center;
    font-size: 30px;
    border-bottom: 1px solid black;
}

#windows .window.map #bikelist .stationswrapper {
    max-height: 100%;
    overflow: auto;
}

#windows .window.map #bikelist .stationswrapper .stationopt {
    border-bottom: 1px solid black;
    cursor: default;
    padding: 4px 10px;
}

#windows .window.map #bikelist .stationswrapper .stationopt > table {
    width: 100%;
    heigh: 100%;
    border-collapse: collapse;
}

#windows .window.map #bikelist .stationswrapper .stationopt > table > tbody > tr > td {
    margin: 0;
    padding: 0;
    text-align: left;
}

#windows .window.map #bikelist .stationswrapper .stationopt > table td.numbikes {
    width: 80px;
}

#windows .window.map #bikelist .stationswrapper .stationopt > table td.directions {
    text-align: right;
    width: 30px;
}

#windows .window.map #bikelist .stationswrapper .stationopt > table td.directions img {
    width: 26px;
    height: 26px;
    cursor: pointer;
}

#windows .window.map #bikelist .stationswrapper .stationopt:hover {
    background: #d0d0d0;
}

#windows .window.map:not(.mobile) #map {
    position: absolute;
    left: 0;
    top: 0;
    width: 50%;
    height: 100%;
}

#windows .window.map:not(.mobile) #bikelist {
    position: absolute;
    left: 50%;
    top: 0;
    width: 50%;
    height: 100%;
}

#windows .window.map.mobile #map {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 50%;
}

#windows .window.map.mobile #bikelist {
    position: absolute;
    left: 0;
    top: 50%;
    width: 100%;
    height: 50%;
}

html, body {
    height: 100%;
    margin: 0;
    padding: 0;
}

